pisi 2.2.19 (??/02/2010)
-------------------------

#6748   - pisi fails to install a package when CWD doesn't exist anymore (real fix)